added more currency support

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
  "name": "CryptoVue",
  "icons": [
   {
-    "src": "\/android-icon-512x512.png",
+    "src": "\/icons/android-icon-512x512.png",
     "sizes": "512x512",
     "type": "image\/png",
     "density": "4.0"
